--- a/src/styles/aside.css
+++ b/src/styles/aside.css
@@ -45,7 +45,7 @@
     padding: 10px;
 }
 
-.titles {
+.title {
     display: flex;
     justify-content: start;
     align-items: center;
@@ -56,7 +56,7 @@
     border: solid rgb(118, 134, 255);
 }
 
-.titles:hover {
+.title:hover {
     color: rgb(40, 40, 147);
     background-color: rgb(205, 218, 255);
     cursor: pointer;
