--- a/src/styles/aside.css
+++ b/src/styles/aside.css
@@ -5,8 +5,8 @@
     align-items: start;
     width: 20%;
     height: 100%;
-    border-right: solid rgb(173, 191, 206) 4px;
-    background-color: rgb(212, 235, 255);
+    border-right: solid #adbfce 4px;
+    background-color: #d4ebff;
     transition: 0.5s;
     overflow-y: scroll;
 }
@@ -23,7 +23,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    padding: var(--medium-space);
     width: 100%;
     height: fit-content;
 }
@@ -41,8 +41,8 @@
     align-items: center;
     width: 100%;
     height: auto;
-    gap: 25px;
-    padding: 10px;
+    gap: var(--big-space);
+    padding: var(--medium-space);
 }
 
 .title {
@@ -51,7 +51,7 @@
     align-items: center;
     width: 100%;
     height: 40px;
-    padding: 5px;
+    padding: var(--small-space);
     border-radius: 13px;
     border: solid rgb(118, 134, 255);
 }
