--- a/src/styles/aside.css
+++ b/src/styles/aside.css
@@ -5,14 +5,9 @@
     align-items: start;
     width: 20%;
     height: 100%;
-    border-right: solid #adbfce 4px;
-    background-color: #d4ebff;
-    transition: 0.5s;
+    border-right: solid 7px var(--cor-media);
+    background-color: var(--cor-secundaria);
     overflow-y: scroll;
-}
-
-.side:hover {
-    width: 30%;
 }
 
 .side-content {
@@ -28,10 +23,16 @@
     height: fit-content;
 }
 
-.icon {
+.fa-bars,
+.fa-magnifying-glass {
     width: 50px;
     height: 50px;
-    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+    border: solid var(--cor-media);
+    cursor: pointer;
 }
 
 .titles-container {
@@ -52,14 +53,14 @@
     width: 100%;
     height: 40px;
     padding: var(--small-space);
-    border-radius: 13px;
-    border: solid rgb(118, 134, 255);
+    border-radius: var(--medium-space);
+    border: solid var(--cor-media);
+    transition: 0.3s;
 }
 
 .title:hover {
-    color: rgb(40, 40, 147);
-    background-color: rgb(205, 218, 255);
+    color: var(--cor-clara);
+    background-color: var(--cor-principal);
     cursor: pointer;
-    transition: 0.3s;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
